Tests/CompilerTests/negative/extern-c-indirect-llvm.hylo
// Must not have zero-sized parameters.
@extern_c_indirect("f4")
fun f1(x: Void)